# holofile

./: .gitignore  README.md  pyproject.toml
src/holofile/: __init__.py  _cli.py  _enums.py  _exceptions.py  _footer.py  _header.py  _helpers.py  _reader.py  _writer.py
tests/: conftest.py  test_cli.py  test_footer.py  test_header.py  test_helpers.py  test_reader.py  test_writer.py
