[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holofile"
version = "0.1.0"
description = "Python I/O library for Holovibes .holo files (format version 7)"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.scripts]
holo = "holofile._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/holofile"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
